--- a/application/index/view/user/all.html
+++ b/application/index/view/user/all.html
@@ -34,6 +34,7 @@ layui.use(['form', 'table'], function () {
         ,data: {$users}
         ,page: true //开启分页
         ,cols: [[ //表头
+            {checkbox: true},
             {field: 'id', title: 'ID',sort: true}
             ,{field: 'username', title: '用户名',sort: true}
             ,{field: 'name', title: '姓名',sort: true}
@@ -82,6 +83,8 @@ layui.use(['form', 'table'], function () {
         }
         // 查看详情
         if (layEvent === 'detail') {
+            var userStatus = data.status === 1 ? '启用' : '禁用';
+            var userLevel = data.level === 1 ? '超级管理员' : '普通用户';
             layer.open({
                 type: 1,
                 area: ['500px'],
@@ -92,9 +95,11 @@ layui.use(['form', 'table'], function () {
                 '<table class="layui-table">' +
                 '<tr><th style="font-weight: bold;" width="80">ID</th><td>'+data.id+'</td></tr>' +
                 '<tr><th style="font-weight: bold;">用户名</th><td>'+data.username+'</td></tr>' +
+                '<tr><th style="font-weight: bold;">用户级别</th><td>'+userLevel+'</td></tr>' +
                 '<tr><th style="font-weight: bold;">姓名</th><td>'+data.name+'</td></tr>' +
                 '<tr><th style="font-weight: bold;">手机号</th><td>'+data.phone+'</td></tr>' +
                 '<tr><th style="font-weight: bold;">部门</th><td>'+data.department+'</td></tr>' +
+                '<tr><th style="font-weight: bold;">用户状态</th><td>'+userStatus+'</td></tr>' +
                 '<tr><th style="font-weight: bold;">创建时间</th><td>'+data.create_time+'</td></tr>' +
                 '</table>' +
                 '</div>' //这里content是一个普通的String
