--- a/application/index/view/user/edit.html
+++ b/application/index/view/user/edit.html
@@ -57,7 +57,7 @@
         <div class="layui-form-item">
             <div class="layui-input-block">
                 <button class="layui-btn" lay-submit lay-filter="formDemo">立即提交</button>
-                <button type="reset" class="layui-btn layui-btn-primary" onclick="location.href='/user/all'">返回</button>
+                <button type="button" class="layui-btn layui-btn-primary" onclick="location.href='/user/all'">返回</button>
             </div>
         </div>
     </form>
