--- a/application/index/view/linkman/all.html
+++ b/application/index/view/linkman/all.html
@@ -83,6 +83,7 @@
                     '<table class="layui-table">' +
                     '<tr><th style="font-weight: bold;" width="80">ID</th><td>'+data.id+'</td></tr>' +
                     '<tr><th style="font-weight: bold;">联系人名称</th><td>'+data.name+'</td></tr>' +
+                    '<tr><th style="font-weight: bold;">所属客户</th><td>'+data.customer.name+'</td></tr>' +
                     '<tr><th style="font-weight: bold;">备注</th><td>'+data.note+'</td></tr>' +
                     '<tr><th style="font-weight: bold;">创建时间</th><td>'+data.create_time+'</td></tr>' +
                     '</table>' +
