合同分类 合同类型 合同 上传 审批 审批节点

--- a/application/index/view/common/base.html
+++ b/application/index/view/common/base.html
@@ -76,9 +76,9 @@
                 <li class="layui-nav-item layui-nav-itemed">
                     <a class="" href="javascript:;"><i class="layui-icon">&#xe60a;</i> 合同管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;">新增合同</a></dd>
-                        <dd><a href="javascript:;">全部合同</a></dd>
-                        <dd><a href="javascript:;">即将到期</a></dd>
+                        <dd><a href="/contract/add">新增合同</a></dd>
+                        <dd><a href="/contract/all">全部合同</a></dd>
+                        <dd><a href="/contract/expiring">即将到期</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
@@ -92,8 +92,12 @@
                 <li class="layui-nav-item">
                     <a href="javascript:;"><i class="layui-icon">&#xe614;</i> &nbsp;合同设置</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;">审批流程</a></dd>
-                        <dd><a href="javascript:;">合同分类</a></dd>
+                        <dd><a href="/approval/all">审批流程</a></dd>
+                        <dd><a href="/approval/add">新建审批</a></dd>
+                        <dd><a href="/category/all">合同分类</a></dd>
+                        <dd><a href="/category/add">新增合同分类</a></dd>
+                        <dd><a href="/type/all">合同类型</a></dd>
+                        <dd><a href="/type/add">新增合同类型</a></dd>
                         <dd><a href="javascript:;">修改记录</a></dd>
                     </dl>
                 </li>
