--- a/application/index/view/approval/add.html
+++ b/application/index/view/approval/add.html
@@ -3,6 +3,13 @@
 <div class="layui-container">
     <form class="layui-form layui-form-pane" action="">
         <div class="layui-form-item">
+            <label class="layui-form-label">审批发起人</label>
+            <div class="layui-input-block">
+                <input type="text" value="{$Think.session.admin.name}" autocomplete="off"
+                       class="layui-input" disabled>
+            </div>
+        </div>
+        <div class="layui-form-item">
             <label class="layui-form-label">审批名称</label>
             <div class="layui-input-block">
                 <input type="text" name="name" required lay-verify="required" placeholder="审批流程名称" autocomplete="off"
@@ -68,14 +75,25 @@
 {block name="js"}
 {__block__}
 <script>
-    // 审批人列表
-    var users = {$users};
-    // 审批人备份
-    var users2 = {$users};
-    // 添加的节点
-    var nodes = {};
-    // 记录节点排序
-    var node_number = 0;
+    // // 审批人列表
+    // var users = {$users};
+    // // 审批人备份
+    // var users2 = {$users};
+    // // 添加的节点
+    // var nodes = {};
+    // // 记录节点排序
+    // var node_number = 0;
+
+    var user = {
+        list: {$users},
+        origin: {$users}
+    }
+
+    var nodes = {
+        add: {},
+        total: 0,
+        maxNodeNum: 0
+    }
 
     layui.use(['form'], function () {
         var $ = layui.jquery;
@@ -122,8 +140,8 @@
         $('#user').click(function () {
             var content = '<form class="layui-form"><select name="user" lay-verify="" lay-search id="pick-user">\n';
             content += '  <option value="">请选择一个审批人</option>\n';
-            for (var i in users) {
-                content += '<option value="'+i+'">'+users[i]['name']+'</option>';
+            for (var i in user.list) {
+                content += '<option value="'+i+'">'+user.list[i]['name']+'</option>';
             }
             content += '</select></form>';
             var userLayerIndex = layer.open({
@@ -138,7 +156,7 @@
                         var nodeE = '<li class="layui-timeline-item node'+userIndex+'">\n' +
                             '                        <i class="layui-icon layui-timeline-axis">&#xe63f;</i>\n' +
                             '                        <div class="layui-timeline-content layui-text">\n' +
-                            '                            <h3 class="layui-timeline-title">'+users[userIndex]['name']+'  <a class="layui-btn layui-btn-xs layui-btn-primary node'+userIndex+'" data-index="'+userIndex+'" style="margin-left: 20px;"><i class="layui-icon">&#xe640;</i></a></h3>\n' +
+                            '                            <h3 class="layui-timeline-title">'+user.list[userIndex]['name']+'  <a class="layui-btn layui-btn-xs layui-btn-primary node'+userIndex+'" data-index="'+userIndex+'" style="margin-left: 20px;"><i class="layui-icon">&#xe640;</i></a></h3>\n' +
                             '                            <p>\n' +
                             '                                待审\n' +
                             '                                <br>\n'
@@ -147,20 +165,23 @@
                             '                    </li>';
                         line.append(nodeE);
                         // 排序+1
-                        node_number ++ ;
+                        nodes.maxNodeNum ++ ;
+                        nodes.total ++ ;
                         // 添加人员,用于入库
-                        nodes[userIndex] = {user_id: users[userIndex]['id'], node_number: node_number};
+                        nodes.add[userIndex] = {user_id: user.list[userIndex]['id'], node_number: nodes.maxNodeNum};
                         // 删除已添加的人员
-                        delete users[userIndex];
+                        delete user.list[userIndex];
+                        console.log(nodes,user)
                         // 绑定node删除事件
                         $('a.node'+userIndex).click(function () {
                             layer.confirm('确定要删除该审批人吗', {icon: 3, title:'提示'}, function(index){
                                 //do something
                                 $('.node'+userIndex).remove();
                                 // 删除节点
-                                delete nodes[userIndex];
+                                delete nodes.add[userIndex];
+                                nodes.total --;
                                 // 添加审批人列表
-                                users[userIndex] = users2[userIndex];
+                                user.list[userIndex] = user.origin[userIndex];
                                 console.log(nodes);
                                 layer.close(index);
                             });
